--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Ventas</title>
 	<link rel="stylesheet" type="text/css" href="css/pagina1.css"> 
 <div class="menu">
-            <li><a href="" target="_top">Inicio</a></li>
+            <li><a href="../index.html" target="_top">Inicio</a></li>
             <li><a href="Paginas/Listas.html" target="_top">Productos</a></li>
             <li><a href="Paginas/Tablas.html" target="_top">Tienda en Linea</a></li>
             <li><a href="Paginas/Contacto.html" target="_top">Contacto</a></li>
