--- a/Paginas/Contacto.html
+++ b/Paginas/Contacto.html
@@ -6,7 +6,7 @@
 	
 	
 <div class="menu">
-            <li><a href="../index web.html" target="_top">Inicio</a></li>
+            <li><a href="../index.html" target="_top">Inicio</a></li>
             <li><a href="Listas.html" target="_top">Productos</a></li>
             <li><a href="Tablas.html" target="_top">Tienda en Linea</a></li>
             <li><a href="" target="_top">Contacto</a></li>
